--- a/administrador/templates/agregar_recepcionista_admin.html
+++ b/administrador/templates/agregar_recepcionista_admin.html
@@ -4,11 +4,11 @@
 
 {% block title %}Gestión de recepcionistas{% endblock %}
 
-{% block extra_head%}
-
+{% block extra_head %}
 <link rel="stylesheet" href="{% static 'styles/agregar_recepcionista.css' %}">
 <link rel="stylesheet" href="{% static 'styles/formularios.css' %}">
 <link rel="stylesheet" href="{% static 'styles/modal.css' %}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 {% endblock %}
 
 {% block header %}
@@ -21,17 +21,10 @@
 {% endblock %}
 
 {% block content %}
-<!-- Contenedor para el mensaje de éxito -->
-<div id="mensaje-exito" class="modal">
-    <div class="contenido-modal-exito">
-        <img src="{% static 'icons/Exito.svg' %}" alt="Éxito">
-        <p>¡Recepcionista agregado con éxito!</p>
-        <button class="boton-continuar" onclick="cerrarModal()">Continuar</button>
-    </div>
-</div>
 
-<!-- Formulario para agregar un recepcionista -->
-<form action="{% url 'agregar_recepcionista' %}" method="POST" onsubmit="return mostrarMensajeExito()">
+
+
+<form action="{% url 'agregar_recepcionista' %}" method="POST">
     {% csrf_token %}
     <h2> Datos del recepcionista </h2>
 
@@ -143,7 +136,8 @@
                 <div class="error">{{ recepcionista_form.turno.errors }}</div>
             </div>
         </div>
-    </div>  
+    </div>
+    
     
     <div class="contenedor-botones">
         <button class="boton-cancelar" id="boton-cancelar">Cancelar</button>
@@ -153,19 +147,22 @@
 </form>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Mostrar el modal si 'success' es verdadero
-        {% if success %}
-            var mensajeExito = document.getElementById("mensaje-exito");
-            mensajeExito.style.display = "block"; // Mostrar el modal
+    document.addEventListener('DOMContentLoaded', function () {
+        {% if messages %}
+            {% for message in messages %}
+                Swal.fire({
+                    title: '¡Éxito!',
+                    icon: 'success',
+                    confirmButtonText: 'Aceptar',
+                    confirmButtonColor: '#3085d6',
+                    background: '#f0f0f0',
+                    timer: 3000,
+                });
+            {% endfor %}
         {% endif %}
     });
 
-    // Función para cerrar el modal
-    function cerrarModal() {
-        var mensajeExito = document.getElementById("mensaje-exito");
-        mensajeExito.style.display = "none"; // Ocultar el modal
-    }
+
 </script>
 
 <script>
@@ -202,4 +199,5 @@
 {% block extra_js %}
 <script src="{% static 'js/formatear-rut.js' %}"></script>
 <script src="{% static 'js/formatear-telefono.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 {% endblock %}
