arreglo el error para mostrar el popup de confirmacion al editar pacientes como recepcionista

--- a/recepcionista/templates/editar_datos_paciente_recepcionista.html
+++ b/recepcionista/templates/editar_datos_paciente_recepcionista.html
@@ -184,6 +184,7 @@
     document.getElementById("boton-cancelar").addEventListener("click", function(){
         window.location.href = "{% url 'mostrar_paciente_recepcionista' paciente.id %}";
     });
+</script>
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
