--- a/administrador/templates/editar_datos_terapeuta_admin.html
+++ b/administrador/templates/editar_datos_terapeuta_admin.html
@@ -6,7 +6,7 @@
 
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'css/editar_datos_terapeuta_admin.css' %}">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 {% endblock %}
 
@@ -171,7 +171,21 @@
                     confirmButtonText: 'Aceptar',
                     confirmButtonColor: '#3085d6',
                     background: '#f0f0f0',
+                    color: '#333',
                     timer: 2000,
+                    customClass: {
+                        popup: 'custom-popup',
+                        title: 'custom-title',
+                        content: 'custom-content',
+                        confirmButton: 'custom-button'
+                    },
+                    didOpen: () => {
+                        // Centrar el título a lo largo del popup
+                        const title = document.querySelector('.swal2-title');
+                        title.style.textAlign = 'center';
+                        title.style.width = '100%';
+                        title.style.border = 'none';
+                    }
                 });
             {% endfor %}
         {% endif %}
