--- a/terapeuta/templates/calendar.html
+++ b/terapeuta/templates/calendar.html
@@ -54,11 +54,11 @@
             <div class="hora-container">
                 <div class="hora-item">
                     <label for="hora_inicio">Hora Inicio</label>
-                    <input class="hora_inicio" type="time" id="hora_inicio" name="hora_inicio" required>
+                    <input class="hora_inicio" type="time" id="hora_inicio" name="hora_inicio" required step="1800">
                 </div>
                 <div class="hora-item">
                     <label for="hora_final">Hora Final</label>
-                    <input class="hora_final" type="time" id="hora_final" name="hora_final" required>
+                    <input class="hora_final" type="time" id="hora_final" name="hora_final" required step="1800">
                 </div>
             </div>
 
@@ -119,11 +119,11 @@
             <div class="hora-container">
                 <div class="hora-item">
                     <label for="hora_inicio_editar">Hora Inicio</label>
-                    <input type="time" id="hora_inicio_editar" name="hora_inicio_editar" required>
+                    <input type="time" id="hora_inicio_editar" name="hora_inicio_editar" required step="1800">
                 </div>
                 <div class="hora-item">
                     <label for="hora_final_editar">Hora Final</label>
-                    <input type="time" id="hora_final_editar" name="hora_final_editar" required>
+                    <input type="time" id="hora_final_editar" name="hora_final_editar" required step="1800">
                 </div>
             </div>
             
