front historial de sesiones, orden de sesiones correcto ahora

--- a/terapeuta/templates/historial_sesiones.html
+++ b/terapeuta/templates/historial_sesiones.html
@@ -78,7 +78,9 @@
       {% endfor %}
     </div>
   {% else %}
+  <div class="no-sesiones">
     <p>No hay sesiones registradas para esta rutina.</p>
+  </div>
   {% endif %}
 
 <!-- Modal PopUp para gráfico de las sesiones-->
