--- a/terapeuta/static/css/historial_sesiones.css
+++ b/terapeuta/static/css/historial_sesiones.css
@@ -1,6 +1,6 @@
 .back-button {
   color: #000;
-  font-size: 24px;
+  font-size: 30px;
   text-decoration: none;
   margin-right: 20px;
   display: flex;
@@ -13,11 +13,20 @@
   transition: color 0.3s ease;
 }
 
+.contenedor-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+}
+
 .contenedor-header h1 {
   display: flex;
   margin: 0;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 500;
+  vertical-align: middle;
 }
 
 .encabezado-historial {
@@ -143,6 +152,15 @@
 
 .btn-ver-grafico i {
   margin-left: 5px;
+}
+
+.no-sesiones{
+  display: flex;
+  margin-top: 200px;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 500;
+  color: #666;
 }
 
 /*----------------- grafico ----------------------- */
