Agregue la función de generación de informes para terapeutas, incluido el total de horas trabajadas, los pacientes asignados, las especialidades y la duración promedio de la sesión.

--- a/administrador/templates/admin_terapeutas.html
+++ b/administrador/templates/admin_terapeutas.html
@@ -38,6 +38,8 @@
     {% endfor %}
     {% endif %}
 </div>
+<button id="boton-reporteria" onclick="window.location.href='{% url 'reporteria_terapeutas' %}'">Reportes
+    <img src="{% static 'icons/reporteria.svg' %}">
 <button id="boton-carga-masiva" onclick="openPopup()">Carga masiva
     <img src="{% static 'icons/carga-masiva.svg' %}">
 </button>
