--- a/administrador/static/styles/listar_terapeutas_activos.css
+++ b/administrador/static/styles/listar_terapeutas_activos.css
@@ -74,6 +74,33 @@
     background-color: #d32f2f;
 }
 
+#boton-reporteria {
+    background-color: #001058;
+    color: #fff;
+    border: none;
+    padding: 3px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    text-wrap: nowrap;
+    margin-right: 5px;
+}
+
+#boton-reporteria img {
+    width: 34px;
+    height: 34px;
+}
+
+#boton-reporteria:hover {
+    background-color: #002080; /* Un color ligeramente más claro para el hover */
+}
+
 #boton-agregar-terapeuta {
     background-color: #001058;
     color: #fff;
